# dials

./: .dockerignore  .editorconfig  .env  .env_sample  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .travis.yml  CONTRIBUTE.md  Dockerfile  OPEN_ITEMS.md  README.md  SETUP.md  Untitled Diagram.drawio  config-overrides.js  docker-compose.prod.yaml  docker-compose.yaml  manage.py  notebook.ipynb  openapi-schema.yml  openshift-start-up-script.sh  package.json  pyproject.toml  requirements.txt  vite.config.js
.s2i/: environment
Development-Docs/: EOS_mount.md  PostgreDB.md  datasets.md  listdatasets.md  start.md
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  env.docker.sample  env.native.sample  manage.py  pyproject.toml
backend/benchmark/: dqmio_reader.py
backend/brilcalc_lumi/: apps.py  routers.py  viewsets.py
backend/brilws/: apps.py  client.py  routers.py  viewsets.py
backend/caf/: apps.py  client.py  routers.py  viewsets.py
backend/cern_auth/: routers.py  serializers.py  viewsets.py
backend/dataset_index/: apps.py  filters.py  models.py  routers.py  serializers.py  viewsets.py
backend/dials/: asgi.py  celery.py  dqmio_perls_mes.py  manage.py  settings.py  urls.py  wsgi.py
backend/dials/cern_auth/: apps.py  routers.py  serializers.py  viewsets.py
backend/dials/dials/: celery.py  settings.py  wsgi.py
backend/dials/dqmio_celery_tasks/: tasks.py  viewsets.py
backend/dials/dqmio_etl/: apps.py  filters.py  methods.py  reader.py  tasks.py  viewsets.py
backend/dials/dqmio_file_indexer/: serializers.py  tasks.py  viewsets.py
backend/dials/dqmio_file_indexer/migrations/: 0003_fileindex_dqmio_file__file_pa_7ac107_idx_and_more.py
backend/dials/utils/: redis_lock.py
backend/dials/utils/rest_framework_cern_sso/: authentication.py  backends.py  exceptions.py  schemes.py  token.py  user.py
backend/dim_mes/: apps.py  filters.py  models.py  routers.py  serializers.py  viewsets.py
backend/dqmio_celery_tasks/: apps.py  filters.py  routers.py  serializers.py  tasks.py  viewsets.py
backend/dqmio_etl/: filters.py  methods.py  models.py  reader.py  routers.py  serializers.py  tasks.py  viewsets.py
backend/dqmio_etl/migrations/: 0001_initial.py  0002_delete_runhistogram.py  0003_lumisection_dqmio_etl_l_run_id_994c90_idx_and_more.py  0004_alter_run_period.py
backend/dqmio_file_indexer/: filters.py  methods.py  models.py  routers.py  tasks.py  viewsets.py
backend/dqmio_file_indexer/migrations/: 0001_initial.py  0002_badfileindex.py  0003_fileindex_dqmio_file__file_pa_7ac107_idx_and_more.py
backend/file_index/: apps.py  filters.py  models.py  routers.py  serializers.py  viewsets.py
backend/lumisection/: apps.py  filters.py  models.py  routers.py  serializers.py  viewsets.py
backend/ml_bad_lumisection/: apps.py  filters.py  models.py  routers.py  serializers.py  viewsets.py
backend/ml_models_index/: apps.py  filters.py  models.py  routers.py  serializers.py  viewsets.py
backend/mlplayground/: manage.py
backend/mlplayground/cern_auth/: apps.py  viewsets.py
backend/mlplayground/custom_auth/: apps.py  keycloak.py  routers.py  schema.py  serializers.py  viewsets.py
backend/mlplayground/dqmio_celery_tasks/: filters.py  routers.py  serializers.py  tasks.py  viewsets.py
backend/mlplayground/dqmio_etl/: filters.py  methods.py  models.py  reader.py  routers.py  serializers.py  tasks.py  utils.py  viewsets.py
backend/mlplayground/dqmio_etl/migrations/: 0001_initial.py  0002_delete_runhistogram.py  0003_lumisection_dqmio_etl_l_run_id_994c90_idx_and_more.py
backend/mlplayground/dqmio_file_indexer/: apps.py  filters.py  methods.py  models.py  routers.py  serializers.py  tasks.py  viewsets.py
backend/mlplayground/dqmio_file_indexer/migrations/: 0001_initial.py  0002_badfileindex.py  0002_remove_fileindex_st_imtime_remove_fileindex_st_mtime_and_more.py
backend/mlplayground/mlplayground/: asgi.py  celery.py  settings.py  spectacular.py  urls.py  wsgi.py
backend/mlplayground/utils/: cern_keycloak.py  redis_lock.py
backend/mlplayground/utils/rest_framework_cern_sso/: authentication.py  backends.py  schemes.py  token.py  user.py
backend/oms_proxy/: apps.py  client.py  routers.py  viewsets.py
backend/run/: apps.py  filters.py  models.py  routers.py  serializers.py  viewsets.py
backend/runregistry_min/: apps.py  client.py  routers.py  viewsets.py
backend/scripts/: entrypoint.sh  migrate.sh  reset-local-redis.sh  run-django-production.sh  setup-django-production.sh  start-dev.sh  start-flower.sh  start.sh
backend/static/: swagger.json
backend/templates/: swagger-ui.html
backend/th1/: apps.py  filters.py  models.py  routers.py  serializers.py  viewsets.py
backend/th2/: apps.py  filters.py  models.py  routers.py  serializers.py  viewsets.py
backend/utils/: common.py  db_router.py  drf_header.py  orm_sql.py  paginate.py  pagination.py  validators.py
backend/utils/filters_mixins/: __init__.py  dataset_index.py  dim_mes.py  file_index.py
backend/utils/rest_framework_cern_sso/: authentication.py  backends.py  exceptions.py  schemes.py  token.py  user.py
backend/utils/serializers_mixins/: __init__.py  dataset_name.py  fields.py  me_name.py
challenge/: admin.py  forms.py  models.py  urls.py  views.py
data_taking_certification/: admin.py  apps.py  models.py  urls.py  views.py
data_taking_objects/: README.md  admin.py  apps.py  forms.py  models.py  (+2 more)
(+662 files in other folders)
