[tool.poetry]
name = "dials"
version = "0.1.0"
description = ""
authors = ["Gabriel Moreira <gabrielmscampos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.0"
celery = "^5.3.6"
redis = "^5.0.1"
django-celery-results = "^2.5.1"
django-filter = "^23.5"
django-cors-headers = "^4.3.1"
python-keycloak = "^3.7.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.0.post1"
gunicorn = "^21.2.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
poethepoet = "^0.24.4"
flower = "^2.0.1"
tqdm = "^4.66.2"
psutil = "^5.9.8"
matplotlib = "^3.8.3"

[tool.poe.tasks]
start-dev = "./backend/scripts/start-dev.sh"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
