[tool.poetry]
name = "newmlplayground"
version = "0.1.0"
description = ""
authors = ["Gabriel Moreira <gabrielmscampos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.0"
celery = "^5.3.6"
redis = "^5.0.1"
django-celery-results = "^2.5.1"
django-filter = "^23.5"
django-cors-headers = "^4.3.1"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pre-commit = "^3.6.0"
poethepoet = "^0.24.4"

[tool.poe.tasks]
start = "./scripts/start.sh"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
